imported from version 2.01, see Changes file.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,19 @@ var pageTracker = _gat._getTracker("UA-1826389-17");
 pageTracker._trackPageview();
 } catch(err) {}</script>
 
+<!--
+    Site Layout, Design &amp; Development by Miss Barbell Productions
+    Original CSS/XHTML Template Design by Wolfgang.
+
+    Valid XHTML 1.0 - http://validator.w3.org/check?uri=referer
+    Powered by LAMP (Linux, Apache, MySQL &amp; Perl) technologies.
+    Produced by LABYRINTH, a state of the art Website Management System
+    available from Miss Barbell Productions.
+    For more information contact Barbie <barbie@missbarbell.co.uk>
+
+    Smoke Box image copyright (c) Tyson Ibele 2004 (http://www.tysonibele.com/Main/gallery.htm)
+-->
+
 </head>
 
 <body>
@@ -159,7 +172,7 @@ pageTracker._trackPageview();
     <div class="footer">
       <p>
       The CPAN Testers server is supported and funded by <a href="http://birmingham.pm.org">Birmingham Perl Mongers</a>.<br />
-      CPAN Testers Development v2.00.
+      CPAN Testers Development v2.01.
       &copy; 2008-2009 CPAN Testers. Comments and design patches to barbie@cpan.org.<br />
       
       The CPAN Testers Family: 
@@ -173,6 +186,9 @@ pageTracker._trackPageview();
       <a href="http://deps.cpantesters.org">Dependencies</a>  &#8226;
       <a href="http://matrix.cpantesters.org">Matrix</a>
       </p>
+    <p>
+    CPAN Testers, supporting the Perl programming language since 1999.
+    </p>
     </div>
 
   </div> 
