--- a/templates/css/layout2_text.css
+++ b/templates/css/layout2_text.css
@@ -168,7 +168,7 @@ a.tooltip:hover span {
 
 .main-navigation form { margin-left: 20px; }
 
-.nav0 {width:700px; position:absolute; z-index:2; margin:127px 0 0 0; margin-left:200px !important /*Firefox*/; margin-left:253px /*IE6*/; font-size: 110%;}
+.nav0 {z-index: 2; margin-top: 128px; font-size: 8pt; position: absolute; right: 0; }   
 .nav0 ul {float:right; padding:4px 0;background-color:#000;}
 .nav0 li {display:inline; list-style:none;margin:0;background-color:#000;padding:3px 5px; }
 .nav0 li a {}
