imported from version 2.03, see Changes file.

--- a/templates/box-sites.html
+++ b/templates/box-sites.html
@@ -10,5 +10,6 @@
           <li class="cyan"><a href="http://devel.cpantesters.org">Development</a></li>
           <li class="brown"><a href="http://deps.cpantesters.org">CPAN Deps</a></li>
           <li class="grey"><a href="http://matrix.cpantesters.org">CPAN Matrix</a></li>
+          <li class="teal"><a href="http://analysis.cpantesters.org">Analysis</a></li>
           </ul>
         </div>
