--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,7 @@ pageTracker._trackPageview();
             <li><a href='http://stats.cpantesters.org/cpanmail.html'>Find A Tester</a></li>
             </ul>
 
+            [% INCLUDE "quote.html" %]
         </div>
 
       <!-- B.1 MAIN CONTENT -->
@@ -205,7 +206,7 @@ pageTracker._trackPageview();
       <p>
       The CPAN Testers server is supported and funded by <a href="http://birmingham.pm.org">Birmingham Perl Mongers</a>.<br />
       CPAN Testers Development v[% VERSION %].
-      &copy; 2008-2009 CPAN Testers. Comments and design patches to barbie@cpan.org.<br />
+      &copy; 2008-2010 CPAN Testers. Comments and design patches to barbie@cpan.org.<br />
       
       The CPAN Testers Family: 
       <a href="http://blog.cpantesters.org">Blog</a>          &#8226;
@@ -216,7 +217,8 @@ pageTracker._trackPageview();
       <a href="http://prefs.cpantesters.org">Preferences</a>  &#8226;
       <a href="http://devel.cpantesters.org">Development</a>  &#8226;
       <a href="http://deps.cpantesters.org">Dependencies</a>  &#8226;
-      <a href="http://matrix.cpantesters.org">Matrix</a>
+      <a href="http://matrix.cpantesters.org">Matrix</a>      &#8226;
+      <a href="http://analysis.cpantesters.org">Analysis</a>
       </p>
     <p>
     CPAN Testers, supporting the Perl programming language since 1999.
