--- a/templates/css/layout2_text.css
+++ b/templates/css/layout2_text.css
@@ -209,3 +209,7 @@ a.tooltip:hover span {
 .nav0 li.green {border-right:5px solid #00ee00;border-left:2px solid #000;}
 .nav0 li.green a {color:#fff;}
 .nav0 li.green a:hover {color:#00ee00;}
+
+.nav0 li.teal {border-right:5px solid #008080;border-left:2px solid #000;}
+.nav0 li.teal a {color:#fff;}
+.nav0 li.teal a:hover {color:#008080;}
