--- a/templates/box-sites.html
+++ b/templates/box-sites.html
@@ -7,6 +7,7 @@
           <li class="blue"><a href="http://stats.cpantesters.org">Statistics</a></li>
           <li class="yellow"><a href="http://pass.cpantesters.org">PASS Matrix</a></li>
           <li class="green"><a href="http://prefs.cpantesters.org">Preferences</a></li>
+          <li class="cornblue"><a href="http://metabase.cpantesters.org">Metabase</a></li>
           <li class="cyan"><a href="http://devel.cpantesters.org">Development</a></li>
           <li class="brown"><a href="http://deps.cpantesters.org">CPAN Deps</a></li>
           <li class="grey"><a href="http://matrix.cpantesters.org">CPAN Matrix</a></li>
