--- a/templates/index.html
+++ b/templates/index.html
@@ -59,9 +59,9 @@ pageTracker._trackPageview();
           <h3>devel.cpantesters.org</h3>
           <h2>Welcome</h2>
         </div>
+      </div>
 
         [% INCLUDE "box-sites.html" %]
-      </div>
 
       <!-- A.4 HEADER BREADCRUMBS -->
 
@@ -126,15 +126,15 @@ pageTracker._trackPageview();
           <h3>CPAN Reporter Tools</h3>
           <p>The following downloads relate to the tools built on the CPAN.pm installation tool.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Reporter">CPAN-Reporter</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Reporter">CPAN-Reporter</a> 
                 (<a href="http://github.com/dagolden/cpan-reporter">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Reporter">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/CPAN-Reporter-Smoker">CPAN-Reporter-Smoker</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Reporter-Smoker">CPAN-Reporter-Smoker</a> 
                 (<a href="http://github.com/dagolden/cpan-reporter-smoker">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Reporter-Smoker">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/CPAN-Reporter-Smoker-Safer">CPAN-Reporter-Smoker-Safer</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Reporter-Smoker-Safer">CPAN-Reporter-Smoker-Safer</a> 
                 (<a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Reporter-Smoker-Safer">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/POE-Component-CPAN-Reporter">POE-Component-CPAN-Reporter</a> 
+            <li><a href="http://search.cpan.org/dist/POE-Component-CPAN-Reporter">POE-Component-CPAN-Reporter</a> 
                 (<a href="http://github.com/bingos/poe-component-cpan-reporter">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=POE-Component-CPAN-Reporter">RT Queue</a>)</li>
           </ul>
@@ -142,16 +142,16 @@ pageTracker._trackPageview();
           <h3>CPANPLUS YACSmoke Tools</h3>
           <p>The following downloads relate to the tools built on the CPANPLUS installation tool.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPANPLUS-YACSmoke">CPANPLUS-YACSmoke</a> 
+            <li><a href="http://search.cpan.org/dist/CPANPLUS-YACSmoke">CPANPLUS-YACSmoke</a> 
                 (<a href="http://github.com/bingos/cpan-reporter">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPANPLUS-YACSmoke">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/POE-Component-CPAN-Reporter">POE-Component-CPANPLUS-YACSmoke</a> 
+            <li><a href="http://search.cpan.org/dist/POE-Component-CPAN-Reporter">POE-Component-CPANPLUS-YACSmoke</a> 
                 (<a href="http://github.com/bingos/poe-component-cpanplus-yacsmoke">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=POE-Component-CPANPLUS-YACSmoke">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/POE-Component-SmokeBox">POE-Component-SmokeBox</a> 
+            <li><a href="http://search.cpan.org/dist/POE-Component-SmokeBox">POE-Component-SmokeBox</a> 
                 (<a href="http://github.com/bingos/poe-component-smokebox">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=POE-Component-SmokeBox">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/smokebrew">smokebrew</a> 
+            <li><a href="http://search.cpan.org/dist/smokebrew">smokebrew</a> 
                 (<a href="http://github.com/bingos/smokebrew">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=smokebrew">RT Queue</a>)</li>
           </ul>
@@ -159,7 +159,7 @@ pageTracker._trackPageview();
           <h3>Common Smoker Client Packages</h3>
           <p>The following downloads relate to the common libraries used by the smoke test clients.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/Test-Reporter">Test-Reporter</a> 
+            <li><a href="http://search.cpan.org/dist/Test-Reporter">Test-Reporter</a> 
                 (<a href="http://github.com/dagolden/test-reporter">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=Test-Reporter">RT Queue</a>)</li>
           </ul>
@@ -170,10 +170,10 @@ pageTracker._trackPageview();
           <h3>Metabase Server Packages</h3>
           <p>The following downloads relate to the packages to access the Metabase server.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/Metabase">Metabase</a> 
+            <li><a href="http://search.cpan.org/dist/Metabase">Metabase</a> 
                 (<a href="http://github.com/dagolden/metabase">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=Metabase">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Metabase">CPAN-Testers-Metabase</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Metabase">CPAN-Testers-Metabase</a> 
                 (<a href="http://github.com/dagolden/cpan-testers-metabase">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Metabase">RT Queue</a>)</li>
           </ul>
@@ -181,7 +181,7 @@ pageTracker._trackPageview();
           <h3>Metabase Client Packages</h3>
           <p>The following downloads relate to the packages to submit reports to the Metabase server.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/Metabase-Client-Simple">Metabase-Client-Simple</a> 
+            <li><a href="http://search.cpan.org/dist/Metabase-Client-Simple">Metabase-Client-Simple</a> 
                 (<a href="http://github.com/dagolden/metabase-client-simple">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=Metabase-Client-Simple">RT Queue</a>)</li>
           </ul>
@@ -189,10 +189,10 @@ pageTracker._trackPageview();
           <h3>Metabase Common Packages</h3>
           <p>The following downloads relate to the packages used to define the contents of the Metabase (i.e. the facts).</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/Metabase-Fact">Metabase-Fact</a> 
+            <li><a href="http://search.cpan.org/dist/Metabase-Fact">Metabase-Fact</a> 
                 (<a href="http://github.com/dagolden/metabase-fact">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=Metabase-Fact">RT Queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Report">CPAN-Testers-Report</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Report">CPAN-Testers-Report</a> 
                 (<a href="http://github.com/dagolden/cpan-testers-report">GitHub</a> / 
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Report">RT Queue</a>)</li>
           </ul>
@@ -206,8 +206,8 @@ pageTracker._trackPageview();
           by the CPAN Testers family of websites, containing the reports metadata as posted to the cpan-testers
           mailing list by the testers.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Data-Generator">CPAN-Testers-Data-Generator</a> (<a href="https://github.com/barbie/cpan-testers-data-generator/tree">GitHub</a> / <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Generator">RT queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/ORDB-CPANTesters">ORDB-CPANTesters</a></li>
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Data-Generator">CPAN-Testers-Data-Generator</a> (<a href="https://github.com/barbie/cpan-testers-data-generator/tree">GitHub</a> / <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Generator">RT queue</a>)</li>
+            <li><a href="http://search.cpan.org/dist/ORDB-CPANTesters">ORDB-CPANTesters</a></li>
           </ul>
 
           <p>Uncompressed size of the SQLite database is <b>[% CPANSTATSDB %]</b>.</p>
@@ -221,10 +221,10 @@ pageTracker._trackPageview();
           by the CPAN Testers family of websites, containing the uploads metadata as posted to the cpan-uploads
           mailing list by PAUSE.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Data-Uploads">CPAN-Testers-Data-Uploads</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Data-Uploads">CPAN-Testers-Data-Uploads</a> 
             (<a href="https://github.com/barbie/cpan-testers-data-uploads/tree">GitHub</a> / 
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Uploads">RT queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/ORDB-CPANUploads">ORDB-CPANUploads</a></li>
+            <li><a href="http://search.cpan.org/dist/ORDB-CPANUploads">ORDB-CPANUploads</a></li>
           </ul>
 
           <p>Uncompressed size of the SQLite database is <b>[% UPLOADSDB %]</b>.</p>
@@ -238,10 +238,10 @@ pageTracker._trackPageview();
           <p>The following data files and tools are provided for use in building the data storage, used
           by the CPAN Testers family of websites, containing the release summary metadata.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Data-Release">CPAN-Testers-Data-Release</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Data-Release">CPAN-Testers-Data-Release</a> 
             (<a href="https://github.com/barbie/CPAN-Testers-Data-Release/tree">GitHub</a> / 
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Release">RT queue</a>)</li>
-            <li><a href="http://search.cpan.org.dist/ORDB-CPANRelease">ORDB-CPANRelease</a></li>
+            <li><a href="http://search.cpan.org/dist/ORDB-CPANRelease">ORDB-CPANRelease</a></li>
           </ul>
 
           <p>Uncompressed size of the SQLite database is <b>[% RELEASEDB %]</b>.</p>
@@ -256,7 +256,7 @@ pageTracker._trackPageview();
           <p>Downloads for the CPAN Testers Statistics website</p>
           <p>The following data files and tools are provided for use in building and expanding the website.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-WWW-Statistics">CPAN-Testers-WWW-Statistics</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-WWW-Statistics">CPAN-Testers-WWW-Statistics</a> 
             (<a href="https://github.com/barbie/cpan-testers-www-statistics/tree">GitHub</a> / 
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Statistics">RT queue</a>)</li>
             <li><a href="/cpanstats-data-latest.tar.gz">cpanstats-data-latest.tar.gz</a></li>
@@ -275,7 +275,7 @@ pageTracker._trackPageview();
           <p>Downloads for the CPAN Testers reports data parser</p>
           <p>The following data files and tools are used to parse the YAML and JSON files stored on the Reports website.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-WWW-Reports-Parser">CPAN-Testers-WWW-Reports-Parser</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-WWW-Reports-Parser">CPAN-Testers-WWW-Reports-Parser</a> 
             (<a href="https://github.com/barbie/CPAN-Testers-WWW-Reports-Parser/tree">GitHub</a> / 
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Reports-Parser">RT queue</a>)</li>
           </ul>
@@ -284,7 +284,7 @@ pageTracker._trackPageview();
           <p>Downloads for the CPAN Testers reports summary mailer</p>
           <p>The following data files and tools are used to parse the reports data and mail the summaries to authors.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-WWW-Reports-Mailer">CPAN-Testers-WWW-Reports-Mailer</a> 
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-WWW-Reports-Mailer">CPAN-Testers-WWW-Reports-Mailer</a> 
             (<a href="https://github.com/barbie/CPAN-Testers-WWW-Reports-Mailer/tree">GitHub</a> / 
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Reports-Mailer">RT queue</a>)</li>
           </ul>
@@ -297,11 +297,11 @@ pageTracker._trackPageview();
           <p>The following package files are provided for use in building and expanding the CPAN Testers code base. If you have
           suggestions for improving the codebase, please use the respective bug trackers listed below.</p>
           <ul>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Common-Article">CPAN-Testers-Common-Article</a> (<a href="https://github.com/barbie/cpan-testers-common-article/tree">GitHub</a>) -
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Common-Article">CPAN-Testers-Common-Article</a> (<a href="https://github.com/barbie/cpan-testers-common-article/tree">GitHub</a>) -
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Common-Article">RT queue</a></li>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Common-DBUtils">CPAN-Testers-Common-DBUtils</a> (<a href="http://github.com/barbie/cpan-testers-common-dbutils/tree">GitHub</a>) -
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Common-DBUtils">CPAN-Testers-Common-DBUtils</a> (<a href="http://github.com/barbie/cpan-testers-common-dbutils/tree">GitHub</a>) -
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Common-DBUtils">RT queue</a></li>
-            <li><a href="http://search.cpan.org.dist/CPAN-Testers-Common-Utils">CPAN-Testers-Common-Utils</a> (<a href="http://github.com/dagolden/cpan-testers-common-utils/tree">GitHub</a>) -
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-Common-Utils">CPAN-Testers-Common-Utils</a> (<a href="http://github.com/dagolden/cpan-testers-common-utils/tree">GitHub</a>) -
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Common-Utils">RT queue</a></li>
           </ul>
  
@@ -316,15 +316,18 @@ pageTracker._trackPageview();
       <p>
       The CPAN Testers server is supported and funded by <a href="http://birmingham.pm.org">Birmingham Perl Mongers</a>.<br />
       CPAN Testers Development v[% VERSION %].
-      &copy; 2008-2010 CPAN Testers. Comments and design patches to barbie@cpan.org.<br />
-      
-      The CPAN Testers Family: 
+      &copy; 2008-2010 CPAN Testers. Comments and design patches to barbie@cpan.org.
+    <p>
+    
+		<p>
+    The CPAN Testers Family: <br />
       <a href="http://blog.cpantesters.org">Blog</a>          &#8226;
       <a href="http://www.cpantesters.org">Reports</a>        &#8226;
       <a href="http://wiki.cpantesters.org">Wiki</a>          &#8226;
       <a href="http://stats.cpantesters.org">Statistics</a>   &#8226;
       <a href="http://pass.cpantesters.org">PASS Matrix</a>   &#8226;
       <a href="http://prefs.cpantesters.org">Preferences</a>  &#8226;
+      <a href="http://metabase.cpantesters.org">Metabase</a>  &#8226;
       <a href="http://devel.cpantesters.org">Development</a>  &#8226;
       <a href="http://deps.cpantesters.org">Dependencies</a>  &#8226;
       <a href="http://matrix.cpantesters.org">Matrix</a>      &#8226;
