imported from version 2.06, see Changes file.

--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,8 @@ pageTracker._trackPageview();
 
           <p>Uncompressed size of the SQLite database is <b>[% CPANSTATSDB %]</b>.</p>
           <ul>
-            <li>Latest SQLite database: <a href="/cpanstats.db.gz">Gzip</a> (<b>[% CPANSTATSGZ %]</b>) / <a href="/cpanstats.db.bz2">Bzip2</a> (<b>[% CPANSTATSBZ %]</b>)</li>
+            <li>Latest SQLite database: <a rel="nofollow" href="/cpanstats.db.gz" >Gzip </a> (<b>[% CPANSTATSGZ %]</b>) / 
+                                        <a rel="nofollow" href="/cpanstats.db.bz2">Bzip2</a> (<b>[% CPANSTATSBZ %]</b>)</li>
           </ul>
 
           <h3>CPAN Testers Upload Database Generator</h3>
@@ -229,8 +230,10 @@ pageTracker._trackPageview();
 
           <p>Uncompressed size of the SQLite database is <b>[% UPLOADSDB %]</b>.</p>
           <ul>
-            <li>Latest SQLite database: <a href="/uploads/uploads.db.gz">Gzip</a> (<b>[% UPLOADSSQLGZ %]</b>) / <a href="/uploads/uploads.db.bz2">Bzip2</a> (<b>[% UPLOADSSQLBZ %]</b>)</li>
-            <li>Latest CSV database:    <a href="/uploads/uploads.csv.gz">Gzip</a> (<b>[% UPLOADSCSVGZ %]</b>) / <a href="/uploads/uploads.csv.bz2">Bzip2</a> (<b>[% UPLOADSCSVBZ %]</b>)</li>
+            <li>Latest SQLite database: <a rel="nofollow" href="/uploads/uploads.db.gz"  >Gzip </a> (<b>[% UPLOADSSQLGZ %]</b>) / 
+                                        <a rel="nofollow" href="/uploads/uploads.db.bz2" >Bzip2</a> (<b>[% UPLOADSSQLBZ %]</b>)</li>
+            <li>Latest CSV database:    <a rel="nofollow" href="/uploads/uploads.csv.gz" >Gzip </a> (<b>[% UPLOADSCSVGZ %]</b>) / 
+                                        <a rel="nofollow" href="/uploads/uploads.csv.bz2">Bzip2</a> (<b>[% UPLOADSCSVBZ %]</b>)</li>
           </ul>
 
           <h3>CPAN Testers Release Summary Database Generator</h3>
@@ -246,7 +249,8 @@ pageTracker._trackPageview();
 
           <p>Uncompressed size of the SQLite database is <b>[% RELEASEDB %]</b>.</p>
           <ul>
-            <li>Latest SQLite database: <a href="/release/release.db.gz">Gzip</a> (<b>[% RELEASEGZ %]</b>) / <a href="/release/release.db.bz2">Bzip2</a> (<b>[% RELEASEBZ %]</b>)</li>
+            <li>Latest SQLite database: <a rel="nofollow" href="/release/release.db.gz" >Gzip </a> (<b>[% RELEASEGZ %]</b>) / 
+                                        <a rel="nofollow" href="/release/release.db.bz2">Bzip2</a> (<b>[% RELEASEBZ %]</b>)</li>
           </ul>
 
           <a name="website"></a>
@@ -264,9 +268,8 @@ pageTracker._trackPageview();
 
           <h3>CPAN Testers Reports</h3>
           <p>Downloads for the CPAN Testers Reports website</p>
-          <p>The following data files and tools were used in building and expanding the old Reports website. The code
-          for building the current website is not currently available. This will change as soon as I have time to
-          properly package all the moving parts.</p>
+          <p>The following data files and tools for building the current website are not currently available. 
+          This will change as soon as I have time to properly package all the moving parts.</p>
           <ul>
             <li>CPAN-Testers-WWW-Reports (GitHub / RT queue) .. coming soon</li>
           </ul>
@@ -288,6 +291,43 @@ pageTracker._trackPageview();
             (<a href="https://github.com/barbie/CPAN-Testers-WWW-Reports-Mailer/tree">GitHub</a> / 
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Reports-Mailer">RT queue</a>)</li>
           </ul>
+
+          <h3>CPAN Testers Wiki</h3>
+          <p>Downloads for the CPAN Testers Wiki website</p>
+          <p>The following data files and tools are provided for use in building and expanding the website. 
+          Note that this is a <a href="http://labyrinth.missbarbell.co.uk">Labyrinth</a> based site.</p>
+          <ul>
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-WWW-Wiki">CPAN-Testers-WWW-Wiki</a> 
+            (<a href="https://github.com/barbie/cpan-testers-www-wiki/tree">GitHub</a> / 
+            <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Wiki">RT queue</a>)</li>
+          </ul>
+
+          <h3>CPAN Testers Blog</h3>
+          <p>Downloads for the CPAN Testers Blog website</p>
+          <p>The following data files and tools are provided for use in building and expanding the website. 
+          Note that this is a <a href="http://labyrinth.missbarbell.co.uk">Labyrinth</a> based site.</p>
+          <ul>
+            <li><a href="http://search.cpan.org/dist/CPAN-Testers-WWW-Blog">CPAN-Testers-WWW-Blog</a> 
+            (<a href="https://github.com/barbie/cpan-testers-www-blog/tree">GitHub</a> / 
+            <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Blog">RT queue</a>)</li>
+          </ul>
+
+          <h3>CPAN Testers Preferences</h3>
+          <p>Downloads for the CPAN Testers Preferences website</p>
+          <p>The following data files and tools for building the current website are not currently available. 
+          This will change as soon as I have time to properly package all the moving parts.</p>
+          <ul>
+            <li>CPAN-Testers-WWW-Preferences (GitHub / RT queue) .. coming soon</li>
+          </ul>
+
+          <h3>CPAN Testers Development</h3>
+          <p>Downloads for the CPAN Testers Development website</p>
+          <p>The following data files and tools for building the current website are not currently available. 
+          This will change as soon as I have time to properly package all the moving parts.</p>
+          <ul>
+            <li>CPAN-Testers-WWW-Development (GitHub / RT queue) .. coming soon</li>
+          </ul>
+
 
           <a name="common"></a>
           <h2 class="rule">Additional Packages</h2>
@@ -316,7 +356,7 @@ pageTracker._trackPageview();
       <p>
       The CPAN Testers server is supported and funded by <a href="http://birmingham.pm.org">Birmingham Perl Mongers</a>.<br />
       CPAN Testers Development v[% VERSION %].
-      &copy; 2008-2010 CPAN Testers. Comments and design patches to barbie@cpan.org.
+      &copy; 2008-2011 CPAN Testers. Comments and design patches to <a href="mailto:barbie@cpan.org">barbie@cpan.org</a>.
     <p>
     
 		<p>
