--- a/templates/css/layout2_text.css
+++ b/templates/css/layout2_text.css
@@ -219,3 +219,7 @@ a.tooltip:hover span {
 .nav0 li.teal {border-right:5px solid #008080;border-left:2px solid #000;}
 .nav0 li.teal a {color:#fff;}
 .nav0 li.teal a:hover {color:#008080;}
+
+.nav0 li.red {border-right:5px solid #FD0E35;border-left:2px solid #000;}
+.nav0 li.red a {color:#fff;}
+.nav0 li.red a:hover {color:#FD0E35;}
