removed link references to cpanstats SQLite database

--- a/templates/index.html
+++ b/templates/index.html
@@ -207,14 +207,9 @@ pageTracker._trackPageview();
           mailing list by the testers.</p>
           <ul>
             <li><a href="https://metacpan.org/release/CPAN-Testers-Data-Generator">CPAN-Testers-Data-Generator</a> (<a href="https://github.com/barbie/cpan-testers-data-generator/tree">GitHub</a> / <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Generator">RT queue</a>)</li>
-            <li><a href="https://metacpan.org/release/ORDB-CPANTesters">ORDB-CPANTesters</a></li>
           </ul>
 
-          <p>Uncompressed size of the SQLite database is <b>[% CPANSTATSDB %]</b>.</p>
-          <ul>
-            <li>Latest SQLite database: <a rel="nofollow" href="/cpanstats.db.gz" >Gzip </a> (<b>[% CPANSTATSGZ %]</b>) / 
-                                        <a rel="nofollow" href="/cpanstats.db.bz2">Bzip2</a> (<b>[% CPANSTATSBZ %]</b>)</li>
-          </ul>
+          <p>The SQLite database that was previously available for download is no longer maintained.</p>
 
           <h3>CPAN Testers Upload Database Generator</h3>
           <p>Downloads for the CPAN Testers 'uploads' database</p>
