Preferences and Development links updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -312,7 +312,9 @@ pageTracker._trackPageview();
           <p>The following data files and tools for building the current website are not currently available. 
           This will change as soon as I have time to properly package all the moving parts.</p>
           <ul>
-            <li>CPAN-Testers-WWW-Preferences (GitHub / RT queue) .. coming soon</li>
+            <li><a href="https://metacpan.org/release/CPAN-Testers-WWW-Preferences">CPAN-Testers-WWW-Blog</a> 
+            (<a href="https://github.com/barbie/cpan-testers-www-preferences/tree">GitHub</a> / 
+            <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Preferences">RT queue</a>)</li>
           </ul>
 
           <h3>CPAN Testers Development</h3>
@@ -320,7 +322,9 @@ pageTracker._trackPageview();
           <p>The following data files and tools for building the current website are not currently available. 
           This will change as soon as I have time to properly package all the moving parts.</p>
           <ul>
-            <li>CPAN-Testers-WWW-Development (GitHub / RT queue) .. coming soon</li>
+            <li><a href="https://metacpan.org/release/CPAN-Testers-WWW-Development">CPAN-Testers-WWW-Blog</a> 
+            (<a href="https://github.com/barbie/cpan-testers-www-development/tree">GitHub</a> / 
+            <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Development">RT queue</a>)</li>
           </ul>
 
 
